--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -120,63 +120,33 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h1 align="center" class="silents">Mark your calendars and keep watching this page for tickets to go on sale!</h1><br>
-<h2 align="center" class="silents">This year, the 2019</font></span></span></h2></p>
+<h2 align="center" class="silents">are proud to present the 2019</font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
 										<font size="6" face="Copperplate Gothic Bold">Silents</font></span><span style="border-collapse: separate; color: rgb(0, 0, 0); font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span"><font size="6"><span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px"> Under the Stars</span></font></span></span></p>
 											<span class="Apple-style-span" style="border-collapse: separate; color: #770000; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-											<h2 align="center" class="silents">
-											will be on Saturday, August 10<sup>th</sup>
+											<h2 class="silents" align="center" class="silents">
+											Saturday, August 10<sup>th</sup> at 6pm
 											</h2></span></TD>
 											<TD valign="top">
 											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-                                            <!--
-											<span class="Apple-style-span">
-											<span style="font-family: Copperplate Gothic Bold; text-align: auto; border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
-											<h3>Buy tickets here! </h3>
-											<h4>(select quantity on shopping cart page)</h4>
-
-<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="ET3FJ56SPRSHJ">
-<table>
-<tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
-	<option value="Individual Ticket">Individual Ticket $50.00 USD</option>
-	<option value="Reserved Table for 10">Reserved Table for 10 $500.00 USD</option>
-</select> </td></tr>
-<tr><td><input type="hidden" name="on1" value="Name for Pickup at Will-Call">Name for Pickup at Will-Call</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-
-											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
-
-											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<font size="4">To buy tickets over the phone, or for 
-											additional info, Call<br>(661) 222&ndash;9542</font></p>
-											<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-											<span style="letter-spacing: normal">
-											<span style="font-family: Copperplate Gothic Bold; -webkit-text-stroke-width:0px; -webkit-text-size-adjust:auto; -webkit-text-decorations-in-effect:none; -webkit-border-vertical-spacing:0px; -webkit-border-horizontal-spacing:0px; word-spacing:0px; widows:2; white-space:normal; text-transform:none; text-indent:0px; orphans:2; line-height:normal; letter-spacing:normal; font-weight:normal; font-variant:normal; font-style:normal; color:#C80000; border-collapse:separate; text-align:auto" class="Apple-style-span">
-											<font size="4">Tickets are non-Refundable</font></span></span></p>
-                                            -->
+                                            <br>
                                             <h2 align="center" class="silents">
-                                            Click 
+                                            Click below to purchase tickets for 
+                                            this year's event
+                                             <br>
+                                             <br>
                                             <a target="_blank" 
-                                             href="https://www.facebook.com/events/2025231327790628/permalink/2052353445078416/">
-                                            HERE</a>
-                                            to see photos from last year's event
-                                            </h2>
-                                            <p align=center>
-                                            <a target="_blank" 
-                                             href="https://www.facebook.com/events/2025231327790628/permalink/2052353445078416/">
-                                            <img align="center" 
-                                            src="silents/silents2018/silents2018-sm.jpg"/>
+                                             href="https://www.eventbrite.com/e/silents-under-the-stars-2019-hart-hall-william-s-hart-park-newhall-ca-tickets-63519411269">
+                                             <button type="button">Buy Tickets to 2019 <br>Silents Under the Stars</button>
                                             </a>
-                                            </p> 
+                                            <h4 align="center" class="silents"><i>
+                                                button takes you to another page
+                                            </i></h4>
+                                             <br>
+											    <h3 align="center">Tickets are non-Refundable</h3>
+                                            </h2>
 											</TD>
 											</TR>
 											<TR>
@@ -184,108 +154,12 @@ function MM_swapImage() { //v3.0
 											    <table border="0" width="100%">
 													<tr>
 														<td colspan="2">
-<h1 align="center" class="silents">Silents Under the Stars 2018</h1><br>
-<h2 align="center" class="silents">
-<i>by Bill Blowers</i>
-</h2>
-<p class="silents">
-It's kind of ironic that we call it &ldquo;Silents Under the Stars&rdquo; Saturday evening, August 11, was anything but silent. The hall and patio at Hart Park were filled with the delightful sounds of people having a great time, greeting old friends, listening to the terrific country western music of the Grateful Dudes Cowboy Band, enjoying a cold drink, and especially the amazing sound of Ray Lowe at the keyboard as he took us back to a simpler time and place. Sherron Blowers and her small but very talented committee came through once again, providing us with an evening that all agreed was the best &ldquo;Silents&rdquo; ever. Why even Mother nature chipped in! She bestowed on the park a mild evening and gentle breeze, a much welcomed and appreciated break from the hot sticky weather.
-</p><p class="silents">
-The silent auction hit a new high with 95 items available for bid, including an American flag made from wine barrels, a patriotic basket from Representative Steve Knight, a one-of-a-kind collectible book of western art, numerous original paintings, unique women's western clothing, gift cards to many local eateries, and many more delightful items too numerous to mention.
-
-</p><p class="silents">
-This was Sherron's tenth year as chairperson for the event. Through her leadership and hard work, &ldquo;Silents&rdquo; has grown to become a major fund raiser for FOHP and from the comments heard Saturday evening, has become a highlight of the year at Hart Park. &ldquo;Best Silents ever&rdquo;, &ldquo;What a great time&rdquo;, &ldquo;Can't wait till next year&rdquo;, &ldquo;That band was terrific&rdquo; &mdash; a small sampling of the remarks coming from one and all.
-
-</p><p class="silents">
-Attending where several members of the City Council, representatives of Supervisor Kathryn Barger's office and many guests who return year after year as well as new guests that we look forward to welcoming back next year.
-
-</p><p class="silents">
-In the evenings silent movie, Toll Gate, Bill Hart portrayed Black Deering, the leader of a notorious gang of bandits. The film was co-written by Bill Hart with help from his sister, Mary Ellen Hart. In addition to the traditional silent film, attendees were treated to two short video presentations. Supervisor Kathryn Barger spoke through the magic of DVDs, thanking everyone for attending and for the ongoing tradition of Hart Park in its quest to preserve the western heritage roots of the Santa Clarita Valley. A second short video presentation was prepared by Phil Scorza, in coordination with SCVTV's Leon Worden, that linked together the histories of William S. Hart and the Newhall area. 
-
-</p><p class="silents">
-Many thanks to all the volunteers that made the evening possible, and to the staff and management of Hart Park for your efforts on behalf of FOHP.
-
+                                                        <img align="center" src="silents/silents2019.png"/>
                                                         </td>
                                                     </tr>
 													<tr>
 														<td colspan="2">
 											<p>
-                                            <hr>
-                                            <hr>
-<!-- ------------------------------------
-											<B class="EVNTC">The Event</B>
-<p>
-<h1 align="center" class="silents">Silents Under the Stars:</h1><br>
-<div>
-<img id="silentsrightthird" src="https://upload.wikimedia.org/wikipedia/commons/8/8f/The_Toll_Gate_%281920%29_-_Ad.jpg" />
-<h2 align="center" class="silents"><br><br>Featuring <em>William S. Hart</em> starring in his own production, 
-with a story co-written by his sister Mary Ellen Hart, also starring his favorite pinto 
-pony Fritz, from 1920, &ldquo;<b>The Toll Gate</b>.&rdquo;</h2><br><br>
-<h2 align="center" class="silents">Did you catch the scene where Bill &amp; Fritz nearly died during the production?</h2><br><br>
-<h2 align="center" class="silents">As always, our movie was accompanied LIVE by <em>Mr. Ray Lowe</em> at the keyboard.</p>
-</h2>
-</div>
-<p align="center">
-										</td>
-													</tr>
-													<tr>
-														<td colspan="2">
-											<B class="EVNTC">What else?</B><p align="center" style="margin-top: 7px; margin-bottom: 5px">
-										<p>
-												<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-										<span class="Apple-style-span">
-										<span style="letter-spacing: normal">
-<h2 class="silents">
-This year we were proud to showcase the western/bluegrass sounds of
-</h2>
-<h1 class="silents" align="center">
-The Grateful Dudes Cowboy Band
-                                        <img class="centeredImage" align="center" src="silents/silents2018/TheGratefulDudes.jpg"/>
-</h1>
-<h2 class="silents">From our own town of Newhall, CA!
-</h2>
-</span>
-                                        </p><br>
-                                        <B class="EVNTC">But that's not all!...
-                                        </span></span></p>
-														</td>
-													</tr>
-													<tr>
-														<td rowspan="2">
-												<span class="Apple-style-span" style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium; ">
-												<img border="0" src="silents/crowd.jpg" width="387" height="259" align="left"></span></td>
-														<td>
-												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												Evening Mansion Tours &amp; Patio Seating -- 
-												6pm</font></span></td>
-													</tr>
-													<tr>
-														<td rowspan="3">
-												<span class="Apple-style-span" style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium; ">
-												<img border="0" src="silents/auction.jpg" width="387" height="259" align="right"></span></td>
-													</tr>
-													<tr>
-														<td>
-														<p align="right">
-												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												Western Silent Auction</font></span></td>
-													</tr>
-													<tr>
-														<td rowspan="2">
-												<span class="Apple-style-span" style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium; ">
-												<img border="0" src="silents/rattlers.jpg" width="387" height="259" align="left"></span></td>
-													</tr>
-													<tr>
-														<td>
-												<p align="left">
-												<span class="Apple-style-span" style="border-collapse: separate; font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px; font-size: medium">
-												<font size="6" face="Copperplate Gothic Bold" color="#770000">
-												BBQ Dinner from Rattler&#8217;s -- 7pm</font></span></td>
-													</tr>
-----------------
--->
 												</table>
 											  </TD>
 											</TR>    
