--- a/index.htm
+++ b/index.htm
@@ -202,6 +202,21 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                 </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
+                                  <a target="_blank" href="http://bit.ly/hartofthematter">
+                                  <img width="312" src="images/eHOTM.png" />
+                                  </a>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
                                     <h2>
                                     Barnyard Closed
                                     </h2>
@@ -243,10 +258,16 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
                           <p>
-    <a href= "Event_Pages/music2019/sax2019-lg.jpg" 
-       title="Saxtravaganza" rel="lightbox[events2019]">
-    <img align="center" src="Event_Pages/music2019/sax2019-sm.jpg"/><p>
-    </a>
+<h2 align="center">Tickets now on Sale for <br></h2>
+<p align="center">
+<a href="Event_Pages/silents.html">
+<img src="Event_Pages/silents/silents2019sign-sm.jpg"/>
+</a>
+<p align="center">
+<h3 align="center">Click 
+<a href="Event_Pages/silents.html">HERE</a> to purchase yours!
+</h3>
+<br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2019 Calendar of Events</h2>
                                 <h3>Click on links as details become available</h3>
@@ -254,16 +275,6 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-
-<tr> <td id="EventDate">
-<h4>NOTE:  Corrected start time!!!</h4>
-Sunday, June 23<sup>rd</sup> at 7pm in Hart Hall
-</td> <td id="Event"> 
-<a href= "Event_Pages/music2019/sax2019-lg.jpg" 
-   title="Music in the Park" rel="lightbox[events2019]">
-Saxtravaganza Free Saxophone Concert
-</a>
-</td></tr>
 
 <tr> <td id="EventDate">
 Fridays at dusk, June 28<sup>th</sup>, July 12<sup>th</sup>, July 26<sup>th</sup>, Aug 16<sup>th</sup>
